# life-sim-python

./: .gitignore  README.md  application.py  config.py  main.py  pyproject.toml  requirements.dev.txt  requirements.txt
shared/: lib.py
simulator/: heal_zones.py  individual.py  main.py
simulator/model/: main.py
simulator/network/: main.py
src/: application.py  curriculum.py  drawing_data.py  fitness.py  individual.py  main.py  plotting.py  project.py  simulation.py
src/core/: application.py  config.py  project.py
src/curricula/: evolutionary.py  main.py  reinforcement.py  types.py
src/life_sim_python.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/model/: main.py  propagation.py
src/services/: individuals.py  projects.py
src/simulation/: fitness.py  heal_zones.py  individual.py  main.py  rad_zones.py  spawning.py  types.py
src/strategies/: evolutionary.py  main.py  models.py  reinforcement.py  types.py
src/utils/: vectors.py
src/visualization/: drawing_data.py  plotting.py
tests/simulation/: test_individual.py
viewer/: main.py
