[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "life-sim-python"
version = "0.1.0"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.mypy]
mypy_path = ["src"]
namespace_packages = true
explicit_package_bases = true
